--- a/about.html
+++ b/about.html
@@ -14,49 +14,6 @@
   </head>
 
   <body onload="onloadFunction()">
-    <div class="draggable-container">
-      <img id="l1" src="./assets/L1.svg" class="draggable"></div>
-      <img id="l2" src="./assets/L2.svg"  class="draggable"></div>
-      <img id="l3" src="./assets/L3.svg"  class="draggable"></div>
-      <img id="l4" src="./assets/L4.svg"  class="draggable"></div>
-      <img id="l5" src="./assets/L5.svg"  class="draggable"></div>
-      <img id="l6" src="./assets/L6.svg"  class="draggable"></div>
-      <img id="l7" src="./assets/L7.svg"  class="draggable"></div>
-      <img id="l8" src="./assets/L8.svg"  class="draggable"></div>
-      <img id="c1" src="./assets/C1.svg"  class="draggable"></div>
-      <img id="c2" src="./assets/C2.svg"  class="draggable"></div>
-      <img id="c3" src="./assets/C3.svg"  class="draggable"></div>
-      <img id="c4" src="./assets/C4.svg"  class="draggable"></div>
-      <img id="c5" src="./assets/C5.svg"  class="draggable"></div>
-      <img id="c6" src="./assets/C6.svg"  class="draggable"></div>
-      <img id="c7" src="./assets/C7.svg"  class="draggable"></div>
-      <img id="c8" src="./assets/C8.svg"  class="draggable"></div>
-      <img id="k1" src="./assets/K1.svg"  class="draggable"></div>
-      <img id="k2" src="./assets/K2.svg"  class="draggable"></div>
-      <img id="k3" src="./assets/K3.svg"  class="draggable"></div>
-      <img id="k4" src="./assets/K4.svg"  class="draggable"></div>
-      <img id="k5" src="./assets/K5.svg"  class="draggable"></div>
-      <img id="k6" src="./assets/K6.svg"  class="draggable"></div>
-      <img id="k7" src="./assets/K7.svg"  class="draggable"></div>
-      <img id="k8" src="./assets/K8.svg"  class="draggable"></div>
-      <img id="a1" src="./assets/A1.svg"  class="draggable"></div>
-      <img id="a2" src="./assets/A2.svg"  class="draggable"></div>
-      <img id="a3" src="./assets/A3.svg"  class="draggable"></div>
-      <img id="a4" src="./assets/A4.svg"  class="draggable"></div>
-      <img id="a5" src="./assets/A5.svg"  class="draggable"></div>
-      <img id="a6" src="./assets/A6.svg"  class="draggable"></div>
-      <img id="a7" src="./assets/A7.svg"  class="draggable"></div>
-      <img id="a8" src="./assets/A8.svg"  class="draggable"></div>
-      <img id="n1" src="./assets/N1.svg"  class="draggable"></div>
-      <img id="n2" src="./assets/N2.svg"  class="draggable"></div>
-      <img id="n3" src="./assets/N3.svg"  class="draggable"></div>
-      <img id="n4" src="./assets/N4.svg"  class="draggable"></div>
-      <img id="n5" src="./assets/N5.svg"  class="draggable"></div>
-      <img id="n6" src="./assets/N6.svg"  class="draggable"></div>
-      <img id="n7" src="./assets/N7.svg"  class="draggable"></div>
-      <img id="n8" src="./assets/N8.svg"  class="draggable"></div>
-
-    </div>
     <main>
     <div class="container">
 
@@ -72,15 +29,61 @@
         The term "apartment" has its origins in French, emerging in the mid-17th century to describe a private suite of rooms. It is derived from the French word "appartement," which traces back to the Italian "appartamento." The Italian term stems from "appartare," signifying "to separate," itself derived from "a parte," meaning "apart." This etymology emphasizes the concept of division and individuality within a broader context, reflecting the historical evolution of communal living spaces.
     </div>
 
-    <div class="item-c">
+    <div class="item-c" onload="onloadFunction()">
+      <div class="item-c-background"></div>
         <div class="item-a2"><img src="./assets/1-nops.svg"></div>
         <div class="item-b2"><img src="./assets/2-chas.svg"></div>
-        <div class="item-c2"><img src="./assets/3-karinas.png"></div>
+        <div class="item-c2"><img src="./assets/3-karinas.svg"></div>
         <div class="item-d2"><img src="./assets/4-living.svg"></div>
         <div class="item-e2"><img src="./assets/5-amps.svg"></div>
+      </div>
+  </div>
+
+  <div class="shuffle">
+    <img id="1" src="./assets/frame1.svg"  class="draggable draggable2"></div>
+    <img id="2" src="./assets/frame2.svg"  class="draggable draggable3"></div>
+    <img id="3" src="./assets/frame3.svg"  class="draggable draggable4"></div>
+    <img id="4" src="./assets/frame4.svg"  class="draggable draggable5"></div>
+    <img id="5" src="./assets/frame5.svg" class="draggable draggable6"></div>
+    <img id="6" src="./assets/frame6.svg" class="draggable draggable7"></div>
+    <img id="7" src="./assets/frame7.svg" class="draggable draggable8"></div>
+    <img id="8" src="./assets/frame8.svg" class="draggable draggable9"></div>
+    <img id="9" src="./assets/frame9.svg" class="draggable draggable10"></div>
+    <img id="10" src="./assets/frame10.svg"  class="draggable draggable11"></div>
+    <img id="11" src="./assets/frame11.svg" class="draggable draggable12"></div>
+    <img id="12" src="./assets/frame12.svg" class="draggable draggable13"></div>
+    <img id="13" src="./assets/frame13.svg"  class="draggable draggable14"></div>
+    <img id="14" src="./assets/frame14.svg"  class="draggable draggable14"></div>
+    <img id="15" src="./assets/frame15.svg" class="draggable draggable16"></div>
+    <img id="16" src="./assets/frame16.svg" class="draggable draggable17"></div>
+    <img id="17" src="./assets/frame17.svg" class="draggable draggable18"></div>
+    <img id="18" src="./assets/frame18.svg" class="draggable draggable19"></div>
+    <img id="19" src="./assets/frame19.svg" class="draggable draggable20"></div>
+    <img id="20" src="./assets/frame20.svg" class="draggable draggable21"></div>
+    <img id="21" src="./assets/frame21.svg" class="draggable draggable22"></div>
+    <img id="22" src="./assets/frame22.svg"  class="draggable draggable23"></div>
+    <img id="23" src="./assets/frame23.svg" class="draggable draggable24"></div>
+    <img id="24" src="./assets/frame24.svg" class="draggable draggable25"></div>
+    <img id="25" src="./assets/frame25.svg"  class="draggable draggable26"></div>
+    <img id="26" src="./assets/frame26.svg" class="draggable draggable27"></div>
+    <img id="27" src="./assets/frame27.svg" class="draggable draggable28"></div>
+    <img id="28" src="./assets/frame28.svg" class="draggable draggable29"></div>
+    <img id="29" src="./assets/frame29.svg" class="draggable draggable30"></div>
+    <img id="30" src="./assets/frame30.svg" class="draggable draggable31"></div>
+    <img id="31" src="./assets/frame31.svg" class="draggable draggable32"></div>
+    <img id="32" src="./assets/frame32.svg" class="draggable draggable33"></div>
+    <img id="33" src="./assets/frame33.svg"  class="draggable draggable34"></div>
+    <img id="34" src="./assets/frame34.svg" class="draggable draggable35"></div>
+    <img id="35" src="./assets/frame35.svg" class="draggable draggable36"></div>
+    <img id="36" src="./assets/frame36.svg"  class="draggable draggable37"></div>
+    <img id="37" src="./assets/frame37.svg" class="draggable draggable38"></div>
+    <img id="38" src="./assets/frame38.svg" class="draggable draggable39"></div>
+    <img id="39" src="./assets/frame39.svg" class="draggable draggable40"></div>
+    <img id="40" src="./assets/frame40.svg"  class="draggable draggable41"></div>
   </div>
 
     <div class="item-d">
+    
     </div>
 </div>
     </main>
