--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <div class="container">
 
     <div class="item-a">
-        <div class="title">APARTMENT ARCHIVES</div>
+        <div class="title">APARTMENT ABOUT</div>
             <div class="about"><a class="buttons" href="archivecopy.html">Archives</a></div>
             <div class="home"><a class="buttons" href="index.html">Home</a></div>
     </div>
@@ -31,11 +31,11 @@
 
     <div class="item-c" onload="onloadFunction()">
       <div class="item-c-background"></div>
-        <div class="item-a2"><img src="./assets/1-nops.svg"></div>
-        <div class="item-b2"><img src="./assets/2-chas.svg"></div>
-        <div class="item-c2"><img src="./assets/3-karinas.svg"></div>
-        <div class="item-d2"><img src="./assets/4-living.svg"></div>
-        <div class="item-e2"><img src="./assets/5-amps.svg"></div>
+        <div class="item-1"><img src="./assets/1-nops.svg"></div>
+        <div class="item-2"><img src="./assets/2-chas.svg"></div>
+        <div class="item-3"><img src="./assets/3-karinas.svg"></div>
+        <div class="item-4"><img src="./assets/4-living.svg"></div>
+        <div class="item-5"><img src="./assets/5-amps.svg"></div>
       </div>
   </div>
 
