--- a/about.html
+++ b/about.html
@@ -18,12 +18,14 @@
     <div class="container">
 
     <div class="item-a">
-        <div class="title">APARTMENT ABOUT</div>
+        <div class="title">APARTMENT</div>
             <div class="about"><a class="buttons" href="archivecopy.html">Archives</a></div>
             <div class="home"><a class="buttons" href="index.html">Home</a></div>
     </div>
 
     <div class="item-b">
+      ABOUT
+      <br><br>
         The “Apartment” archival collection comprises items discovered within a shared apartment, where I live with three other suite mates. The website meticulously presents this collection, exploring the nuances of apartment living and the intricate dynamics of cohabitation, intertwined with our individual preferences and unique identities.
         <br><br>
         The term "apartment" has its origins in French, emerging in the mid-17th century to describe a private suite of rooms. It is derived from the French word "appartement," which traces back to the Italian "appartamento." The Italian term stems from "appartare," signifying "to separate," itself derived from "a parte," meaning "apart." This etymology emphasizes the concept of division and individuality within a broader context, reflecting the historical evolution of communal living spaces.
