--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
     
     <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Doppio+One&family=Instrument+Serif:ital@0;1&family=Kulim+Park&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
   </head>
 
   <body onload="onloadFunction()">
