--- a/archivecopy.html
+++ b/archivecopy.html
@@ -8,20 +8,22 @@
 
     <link rel="stylesheet" type="text/css" href="./reset.css" />
     <link rel="stylesheet" type="text/css" href="./archivecopy.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Doppio+One&family=Instrument+Serif:ital@0;1&family=Kulim+Park&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
   </head>
+  <main>
   <body>
   <nav> 
       <div class="head">
-          <div class="title">APARTMENT ARCHIVES</div>
+          <div class="title">APARTMENT</div>
       </div>
-      <div class="tabs"></div>
+      <div class="tabs">
           <div class="about"><a class="buttons" href="about.html">About</a></div>
           <div class="home"><a class="buttons" href="index.html">Home</a></div>
       </div>
   </nav>
   <hr>
-     
-    <main>
 
     <div class="filter">
     <div class="filter">filter:</div>
