--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" type="text/css" href="./reset.css" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Doppio+One&family=Instrument+Serif:ital@0;1&family=Kulim+Park&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
   </head>
   <body>
      <div class="button-container">
